--- a/lugang/res/values/styles.xml
+++ b/lugang/res/values/styles.xml
@@ -18,6 +18,13 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
+    <!-- zxing style -->
+    <style name="ResultButton" parent="@android:style/Widget.Holo.Button.Borderless.Small">
+    <item name="android:layout_width">0dip</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_weight">1</item>
+  </style>
+    
     <!-- Header style -->
     <style name="header">
         <item name="android:layout_height">wrap_content</item>
