--- a/lugang/res/layout/express_item.xml
+++ b/lugang/res/layout/express_item.xml
@@ -16,12 +16,23 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:text="序号"/>
-    <TextView android:id="@+id/go"
+    <TextView android:id="@+id/from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:textSize="20sp"
-        android:text="出发/到达地"/>
+        android:text="出发地"/>
+    <TextView android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textSize="20sp"
+        android:text="-->"/>
+    <TextView android:id="@+id/to"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textSize="20sp"
+        android:text="出发地"/>
     </LinearLayout>
     
     
