--- a/lugang/res/layout/tab3.xml
+++ b/lugang/res/layout/tab3.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="150dp"
         android:orientation="vertical">
     	<Button style="@style/tabone"
+    	    android:id="@+id/history"
         	android:text="@string/singlein"/>
     
     	<Button style="@style/tabone"
