--- a/lugang/res/layout/tab4.xml
+++ b/lugang/res/layout/tab4.xml
@@ -18,6 +18,7 @@
         android:orientation="vertical">
         
         <Button style="@style/tabone"
+            android:id="@+id/history"
         android:text="@string/singleout"/>
     
     	<Button style="@style/tabone"
