--- a/lugang/res/layout/activity_notice_detail.xml
+++ b/lugang/res/layout/activity_notice_detail.xml
@@ -10,4 +10,38 @@
         android:background="#33B5E5"/>
     <include layout="@layout/logo"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/newstitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:textColor="@android:color/holo_blue_light"
+            android:textSize="20sp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="10sp"
+            android:text="TextView" />
+
+    </LinearLayout>
+
+    <View style="@style/line"/>
+    
+    <TextView
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="" />
+
 </LinearLayout>
