--- a/lugang/res/layout/activity_bill_detail.xml
+++ b/lugang/res/layout/activity_bill_detail.xml
@@ -10,4 +10,190 @@
         android:background="#33B5E5"/>
     <include layout="@layout/logo"/>
 
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <GridLayout android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:columnCount="4"
+        android:orientation="horizontal">
+        
+        <TextView
+            style="@style/detail"
+            android:text="发货码" />
+
+        <TextView android:text="2014012100000842"
+            android:id="@+id/name"
+            android:layout_columnSpan="3"
+            android:layout_marginLeft="10dp"
+            android:textSize="15sp"
+            android:textColor="@android:color/holo_blue_dark"/>
+        
+        <View style="@style/line"/>
+        
+        <TextView style="@style/detail"
+            android:text="收货人"/>
+        <TextView android:layout_columnSpan="3"
+            android:id="@+id/getter"
+            android:layout_width="200dp"
+            android:layout_marginLeft="10dp"
+            android:text=""/>
+        
+        <View style="@style/line"/>
+        
+        <TextView style="@style/detail"
+            android:text="收货人电话"/>
+        <TextView android:layout_columnSpan="2"
+            android:id="@+id/gphone"
+            android:layout_marginLeft="10dp"
+            android:textColor="@android:color/holo_orange_light"
+            android:text="0772-1010110"/>
+        <Button android:layout_height="30dp"
+            android:id="@+id/gdial"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/login_button_bg"
+            android:textColor="@android:color/white"
+            android:text="拨 打"/>
+        
+        <View style="@style/line"/>
+        
+        <TextView style="@style/detail"
+            android:text="目的地"/>
+        <TextView android:layout_columnSpan="3"
+            android:id="@+id/end"
+            android:layout_width="200dp"
+            android:layout_marginLeft="10dp"
+            android:text=""/>
+        
+        <View style="@style/line"/>
+        
+        <TextView style="@style/detail"
+            android:text="收货人地址"/>
+        <TextView android:layout_columnSpan="3"
+            android:id="@+id/gaddress"
+            android:layout_width="200dp"
+            android:layout_marginLeft="10dp"
+            android:text="东五路新概念物流中心"/>
+        
+        <View style="@style/line"/>
+        
+        <TextView style="@style/detail"
+            android:text="托运人"/>
+        <TextView android:layout_columnSpan="3"
+            android:id="@+id/sender"
+            android:layout_width="200dp"
+            android:layout_marginLeft="10dp"
+            android:text=""/>
+        
+        <View style="@style/line"/>
+        
+        <TextView style="@style/detail"
+            android:text="托运人电话"/>
+        <TextView android:layout_columnSpan="2"
+            android:id="@+id/sphone"
+            android:layout_marginLeft="10dp"
+            android:textColor="@android:color/holo_orange_light"
+            android:text="0772-1010110"/>
+        <Button android:layout_height="30dp"
+            android:id="@+id/sdial"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/login_button_bg"
+            android:textColor="@android:color/white"
+            android:text="拨 打"/>
+        
+        <View style="@style/line"/>
+        
+        <TextView style="@style/detail"
+            android:text="出发地"/>
+        <TextView android:layout_columnSpan="3"
+            android:id="@+id/start"
+            android:layout_width="200dp"
+            android:layout_marginLeft="10dp"
+            android:text=""/>
+        
+        <View style="@style/line"/>
+        
+        <TextView style="@style/detail"
+            android:text="托运人地址"/>
+        <TextView android:layout_columnSpan="3"
+            android:id="@+id/saddress"
+            android:layout_width="200dp"
+            android:layout_marginLeft="10dp"
+            android:text="东五路新概念物流中心"/>
+        
+        <View style="@style/line"/>
+        
+    </GridLayout>
+
+            <LinearLayout
+                android:id="@+id/record"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:orientation="horizontal" >
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
+                    android:layout_margin="5dp"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/textView1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="流转记录"
+                        android:textColor="@android:color/darker_gray" />
+
+                    <TextView
+                        android:id="@+id/recordView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true" />
+                </LinearLayout>
+                
+                <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:orientation="horizontal" >
+                <ImageView 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/yc_right"/>
+                </LinearLayout>
+
+            </LinearLayout>
+            <View style="@style/line"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:textColor="@android:color/darker_gray"
+                    android:text="货物列表" />
+
+            <ListView
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@android:color/transparent" >
+            </ListView>
+
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
