--- a/lugang/res/layout/activity_express_detail.xml
+++ b/lugang/res/layout/activity_express_detail.xml
@@ -22,10 +22,10 @@
             android:textSize="15sp"
             android:layout_marginLeft="10dp"
             android:textColor="@android:color/holo_blue_dark"/>
-        <TextView android:layout_width="wrap_content"
+        <ImageView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="-->"/>
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/between"/>
         <TextView android:text="北海市"
             android:id="@+id/tocity"
             android:textSize="15sp"
