--- a/lugang/res/layout/activity_stuff_detail.xml
+++ b/lugang/res/layout/activity_stuff_detail.xml
@@ -18,6 +18,7 @@
         <TextView style="@style/detail"
             android:text="物品名称"/>
         <TextView android:text="电冰箱"
+            android:id="@+id/name"
             android:textSize="15sp"
             android:layout_columnSpan="3"
             android:layout_marginLeft="10dp"
@@ -28,6 +29,7 @@
         <TextView style="@style/detail"
             android:text="出发地"/>
         <TextView android:layout_columnSpan="3"
+            android:id="@+id/start"
             android:layout_marginLeft="10dp"
             android:textColor="@android:color/holo_blue_dark"
             android:text="广西-柳州市-市辖区"/>
@@ -37,6 +39,7 @@
         <TextView style="@style/detail"
             android:text="目的地"/>
         <TextView android:text="广西-南宁市"
+            android:id="@+id/end"
             android:layout_marginLeft="10dp"
             android:textColor="@android:color/holo_green_dark"
             android:layout_columnSpan="3"/>
@@ -46,6 +49,7 @@
         <TextView style="@style/detail"
             android:text="运抵期限"/>
         <TextView android:layout_columnSpan="3"
+            android:id="@+id/arriveTime"
             android:layout_marginLeft="10dp"
             android:text="2014-01-09"/>
         <View style="@style/line"/>
@@ -53,6 +57,7 @@
         <TextView style="@style/detail"
             android:text="数量"/>
         <TextView android:layout_columnSpan="3"
+            android:id="@+id/totalCount"
             android:layout_marginLeft="10dp"
             android:text="10"/>
         <View style="@style/line"/>
@@ -60,6 +65,7 @@
         <TextView style="@style/detail"
             android:text="总重量"/>
         <TextView android:layout_columnSpan="3"
+            android:id="@+id/totalWeight"
             android:layout_marginLeft="10dp"
             android:text="2t"/>
         <View style="@style/line"/>
@@ -68,6 +74,7 @@
         <TextView style="@style/detail"
             android:text="总体积"/>
         <TextView android:layout_columnSpan="3"
+            android:id="@+id/cubage"
             android:layout_marginLeft="10dp"
             android:text="0立方"/>
         <View style="@style/line"/>
@@ -75,6 +82,7 @@
         <TextView style="@style/detail"
             android:text="联系人"/>
         <TextView android:layout_columnSpan="3"
+            android:id="@+id/contact"
             android:layout_marginLeft="10dp"
             android:textColor="@android:color/holo_red_light"
             android:text="黄老大"/>
@@ -83,10 +91,12 @@
         <TextView style="@style/detail"
             android:text="联系电话"/>
         <TextView android:layout_columnSpan="2"
+            android:id="@+id/phone"
             android:layout_marginLeft="10dp"
             android:textColor="@android:color/holo_red_light"
             android:text="18648807322"/>
         <Button android:layout_height="30dp"
+            android:id="@+id/dial"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:layout_marginLeft="10dp"
@@ -98,6 +108,7 @@
         <TextView style="@style/detail"
             android:text="说明"/>
         <TextView android:layout_columnSpan="3"
+            android:id="@+id/detail"
             android:layout_marginLeft="10dp"
             android:text=""/>
         
