--- a/lugang/res/layout/express_item.xml
+++ b/lugang/res/layout/express_item.xml
@@ -22,15 +22,15 @@
         android:layout_marginLeft="10dp"
         android:textSize="20sp"
         android:text="出发地"/>
-    <TextView android:layout_width="wrap_content"
+    <ImageView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:textSize="20sp"
-        android:text="-->"/>
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="5dp"
+        android:src="@drawable/between"/>
     <TextView android:id="@+id/to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:textSize="20sp"
         android:text="出发地"/>
     </LinearLayout>
