--- a/lugang/res/layout/office_header.xml
+++ b/lugang/res/layout/office_header.xml
@@ -15,7 +15,8 @@
         android:layout_height="match_parent"
         android:background="@android:color/darker_gray"/>
     
-    <TextView android:layout_width="0dp"
+    <TextView android:id="@+id/txt"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="7"
         android:gravity="center"
